--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,266 +1,183 @@
+.advantages {
+	@media #{$desktop-only} {
+		margin-bottom: 50px;
+	}
+}
+
 .advantages__list {
+	font-family: "Oswald", sans-serif;
+	font-weight: 400;
+	color: rgb(0 0 0 / 1);
+	text-transform: none;
 	list-style-type: none;
 	text-align: left;
 	display: grid;
 	gap: 24px;
 	padding: 0;
 	margin: 0;
-}
 
-@media #{$mobile-only} {
-	.advantages__item {
-		padding-left: 80px;
-		position: relative;
-
-		&::before {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 60px;
-			height: 60px;
-			background-color: var(--accent-color);
-			top: -3px;
-			left: -1px;
-		}
-
-		&--icon-leaf::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#leaf");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-pot::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#pot");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-cutlery::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#cutlery");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-alarm::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#alarm");
-			top: 10px;
-			left: 14px;
-		}
-	}
-
-	.advantages__title {
-		font-size: 36px;
-		line-height: 40px;
-	}
-
-	.advantages {
-		margin-bottom: 50px;
-	}
-}
-
-@media #{$desktop-only} {
-	.advantages__title {
-		font-size: 60px;
-		line-height: 60px;
-	}
-
-	.advantages__list {
-		display: grid;
+	@media #{$desktop-only} {
 		grid-template-columns: repeat(4, 1fr);
 		gap: 80px;
 	}
 
-	.advantages__item {
-		font-size: 16px;
-		line-height: 24px;
-		padding: 151px 26px 57px 0;
-		width: 248px;
-		position: relative;
-
-		&::before {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 80px;
-			height: 80px;
-			background-color: var(--accent-color);
-			top: 70px;
-			left: -1px;
-		}
-
-		&--icon-leaf::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#leaf");
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-pot::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#pot");
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-cutlery::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#cutlery");
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-alarm::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#alarm");
-			top: 94px;
-			left: 23px;
-		}
-	}
-}
-
-@media #{$tablet-only} {
-	.advantages__title {
-		font-size: 60px;
-		line-height: 60px;
-	}
-
-	.advantages__list {
-		display: grid;
+	@media #{$tablet-only} {
 		grid-template-columns: repeat(2, 1fr);
 		gap: 37px 137px;
-		counter-reset: css-counter 0;
-	}
-
-	.adventages__list-wrapper {
-		counter-increment: css-counter 1;
-
-		&::after {
-			content: counter(css-counter) "";
-			font-family: "Oswald", sans-serif;
-			font-size: 280px;
-			position: absolute;
-			color: #f2f2f2;
-			z-index: 0;
-		}
-	}
-
-	.advantages__item {
-		width: 245px;
-		position: relative;
-		padding: 151px 26px 57px 0;
-		counter-increment: css-counter 1;
-		z-index: 3;
-
-		&::after {
-			content: counter(css-counter) "";
-			font-family: "Oswald", sans-serif;
-			font-size: 280px;
-			position: absolute;
-			color: #f2f2f2;
-			z-index: 0;
-		}
-
-		&::before {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 60px;
-			height: 60px;
-			background-color: var(--accent-color);
-			top: -3px;
-			left: -1px;
-		}
-
-		&--icon-leaf::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#leaf");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-pot::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#pot");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-cutlery::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#cutlery");
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-alarm::after {
-			content: "";
-			display: block;
-			position: absolute;
-			width: 30px;
-			height: 32px;
-			background-image: url("/icons/stack.svg#alarm");
-			top: 10px;
-			left: 14px;
-		}
 	}
 }
 
 .advantages__title {
 	font-family: "Oswald", sans-serif;
 	font-weight: 400;
-	color: rgb(0 0 0 / 1);
-	text-transform: none;
-	text-align: left;
+	font-size: 36px;
+	line-height: 40px;
+	color: #000000;
+	margin-block: 20px 40px;
+
+	@media #{$not-mobile} {
+		font-size: 60px;
+		line-height: 60px;
+	}
+
+	@media #{$tablet-only} {
+		margin-block: 45px 32px;
+	}
+
+	@media #{$desktop-only} {
+		margin-block: 71px 32px;
+	}
 }
 
 .advantages__item {
+	font-family: "Lato", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 18px;
+	text-align: left;
 	color: var(--main-color);
+	position: relative;
+	padding-left: 80px;
+
+	&::before {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 60px;
+		height: 60px;
+		background-color: var(--accent-color);
+		top: -3px;
+		left: -1px;
+	}
+
+	&--icon-leaf::after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 30px;
+		height: 32px;
+		background-image: url("/icons/stack.svg#leaf");
+		top: 10px;
+		left: 14px;
+	}
+
+	&--icon-pot::after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 30px;
+		height: 32px;
+		background-image: url("/icons/stack.svg#pot");
+		top: 10px;
+		left: 14px;
+	}
+
+	&--icon-cutlery::after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 30px;
+		height: 32px;
+		background-image: url("/icons/stack.svg#cutlery");
+		top: 10px;
+		left: 14px;
+	}
+
+	&--icon-alarm::after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 30px;
+		height: 32px;
+		background-image: url("/icons/stack.svg#alarm");
+		top: 10px;
+		left: 14px;
+	}
+
+	@media #{$desktop-only} {
+		font-size: 16px;
+		line-height: 24px;
+		padding: 151px 26px 57px 0;
+		width: 248px;
+
+		&::before {
+			width: 80px;
+			height: 80px;
+			top: 70px;
+			left: -1px;
+		}
+
+		&--icon-leaf::after {
+			top: 94px;
+			left: 23px;
+		}
+
+		&--icon-pot::after {
+			top: 94px;
+			left: 23px;
+		}
+
+		&--icon-cutlery::after {
+			top: 94px;
+			left: 23px;
+		}
+
+		&--icon-alarm::after {
+			top: 94px;
+			left: 23px;
+		}
+	}
+
+	@media #{$tablet-only} {
+		width: 245px;
+		padding: 151px 26px 57px 0;
+		z-index: 3;
+
+		&::before {
+			width: 60px;
+			height: 60px;
+			top: -3px;
+			left: -1px;
+		}
+
+		&--icon-leaf::after {
+			top: 10px;
+			left: 14px;
+		}
+
+		&--icon-pot::after {
+			top: 10px;
+			left: 14px;
+		}
+
+		&--icon-cutlery::after {
+			top: 10px;
+			left: 14px;
+		}
+
+		&--icon-alarm::after {
+			top: 10px;
+			left: 14px;
+		}
+	}
 }
