--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,14 @@
 .example {
 	background-color: rgb(234 234 234);
+
+	@media #{$not-mobile} {
+		background-color: #ffffff;
+	}
+
+	@media #{$mobile-only} {
+		padding-bottom: 40px;
+		margin-top: 49px;
+	}
 }
 
 .example__title {
@@ -10,208 +19,145 @@
 	color: rgb(0 0 0 / 1);
 	text-transform: none;
 	text-align: left;
-}
 
-@media #{$tablet-only} {
-	.example__main-wrapper {
-		background: linear-gradient(to top, #eaeaea 50%, #ffffff 50%);
-	}
-
-	.example {
-		background-color: #ffffff;
-	}
-
-	.example__wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.example__result-list {
-		margin: 0;
-		list-style-type: none;
-		display: grid;
-		grid-template-columns: 162px 162px 1fr;
-		gap: 42px;
-	}
-
-	.example__title {
-		font-size: 60px;
-		line-height: 60px;
-		padding-block: 43px 63px;
-		margin-block: 0;
-	}
-
-	.example__description {
-		font-size: 16px;
-		line-height: 24px;
-		margin: 0;
-		margin-bottom: 40px;
-	}
-
-
-	.example__result-number {
-		&--item {
-			order: 1;
-			margin: 0;
-			font-size: 30px;
-			line-height: 37px;
-			text-align: center;
-		}
-	}
-
-	.example__result-item {
-		font-family: "Oswald", sans-serif;
-		color: #000000;
-		display: flex;
-		flex-direction: column;
-
-
-		&--total {
-			text-align: right;
-			font-size: 20px;
-			font-weight: 400;
-			line-height: 20px;
-			color: #000000;
-			text-transform: uppercase;
-		}
-
-		&--item {
-			background-image: url("/icons/stack.svg#frame");
-			padding-top: 15px;
-		}
-	}
-
-	.example__result-description {
-		&--item {
-			font-size: 14px;
-			font-weight: 400;
-			line-height: 14px;
-			text-align: center;
-			order: 2;
-			color: #444444;
-			margin-top: 11px;
-		}
-	}
-}
-
-@media #{$desktop-only} {
-	.example__result-list {
-		margin: 0;
-		list-style-type: none;
-		display: grid;
-		gap: 42px 55px;
-		grid-template-columns: 162px 162px;
-	}
-
-	.example__main-wrapper {
-		background-color: #eaeaea;
-	}
-
-	.example {
-		background-color: #ffffff;
-	}
-
-	.example__wrapper {
-		display: flex;
-		gap: 224px;
-		padding-bottom: 75px;
-	}
-
-	.example__title {
-		font-size: 60px;
-		line-height: 60px;
-		padding-block: 69px 76px;
-		margin-block: 0;
-	}
-
-	.example__description {
-		font-size: 16px;
-		line-height: 24px;
-		margin: 0;
-		padding-block: 70px;
-		width: 433px;
-	}
-
-
-	.example__result-number {
-		&--item {
-			order: 1;
-			margin: 0;
-			font-size: 30px;
-			line-height: 37px;
-			text-align: center;
-		}
-	}
-
-	.example__result-item {
-		font-family: "Oswald", sans-serif;
-		color: #000000;
-		display: flex;
-		flex-direction: column;
-
-
-		&--total {
-			text-align: right;
-			font-size: 20px;
-			font-weight: 400;
-			line-height: 20px;
-			color: #000000;
-			text-transform: uppercase;
-			display: flex;
-			gap: 45px;
-			grid-column: 1/3;
-			flex-direction: row;
-		}
-
-		&--item {
-			background-image: url("/icons/stack.svg#frame");
-			padding-top: 15px;
-		}
-	}
-
-	.example__result-description {
-		&--item {
-			font-size: 14px;
-			font-weight: 400;
-			line-height: 14px;
-			text-align: center;
-			order: 2;
-			color: #444444;
-			margin-top: 11px;
-		}
-	}
-}
-
-@media #{$mobile-only} {
-	.example {
-		padding-bottom: 40px;
-	}
-
-	.example__wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 20px;
-	}
-
-	.example__title {
+	@media #{$mobile-only} {
 		padding-block: 25px 40px;
 	}
 
-	.example__description {
-		margin-block: 0 10px;
+	@media #{$not-mobile} {
+		font-size: 60px;
+		line-height: 60px;
+		margin-block: 0;
 	}
 
-	.example__result-list {
-		list-style-type: none;
-		display: grid;
+	@media #{$tablet-only} {
+		padding-block: 43px 63px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 69px 76px;
+	}
+}
+
+.example__main-wrapper {
+	@media #{$tablet-only} {
+		background: linear-gradient(to top, #eaeaea 50%, #ffffff 50%);
+	}
+
+	@media #{$desktop-only} {
+		background-color: #eaeaea;
+	}
+}
+
+
+.example__wrapper {
+	display: flex;
+
+	@media #{$mobile-only} {
+		gap: 20px;
+	}
+
+	@media #{$not-desktop} {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	@media #{$desktop-only} {
+		gap: 224px;
+		padding-bottom: 75px;
+	}
+}
+
+.example__result-list {
+	margin: 0;
+	list-style-type: none;
+	display: grid;
+
+	@media #{$mobile-only} {
 		grid-template-columns: repeat(2, 1fr);
 		gap: 20px 32px;
 		margin: 0;
 	}
 
-	.example__result-item {
+	@media #{$tablet-only} {
+		grid-template-columns: 162px 162px 1fr;
+		gap: 42px;
+	}
+
+	@media #{$desktop-only} {
+		gap: 42px 55px;
+		grid-template-columns: 162px 162px;
+	}
+}
+
+.example__description {
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0;
+
+	@media #{$mobile-only} {
+		margin-block: 0 10px;
+		font-size: 14px;
+		line-height: 18px;
+	}
+
+	@media #{$tablet-only} {
+		margin-bottom: 40px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 70px;
+		width: 433px;
+	}
+}
+
+.example__result-number {
+	font-family: "Oswald", sans-serif;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: rgb(0 0 0 / 1);
+	margin: 0;
+
+	&--item {
+		order: 1;
+		font-size: 30px;
+		line-height: 37px;
+		text-align: center;
+	}
+
+	@media #{$mobile-only} {
+		font-size: 24px;
+		line-height: 24px;
+
+		&--total {
+			font-size: 14px;
+			line-height: 20px;
+			order: 2;
+		}
+	}
+}
+
+.example__result-item {
+	font-family: "Oswald", sans-serif;
+	color: #000000;
+	display: flex;
+	flex-direction: column;
+
+	&--total {
+		text-align: right;
+		font-size: 20px;
+		font-weight: 400;
+		line-height: 20px;
+		color: #000000;
+		text-transform: uppercase;
+	}
+
+	&--item {
+		background-image: url("/icons/stack.svg#frame");
+		padding-top: 15px;
+	}
+
+	@media #{$mobile-only} {
 		display: grid;
 		gap: 8px;
 		position: relative;
@@ -222,13 +168,29 @@
 			justify-content: center;
 		}
 
-		&--item {
-			background-image: url("/icons/stack.svg#frame");
-			padding-top: 15px;
+		@media #{$desktop-only} {
+			&--total {
+				display: flex;
+				gap: 45px;
+				grid-column: 1/3;
+				flex-direction: row;
+			}
 		}
 	}
+}
 
-	.example__result-description {
+.example__result-description {
+	&--item {
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 14px;
+		text-align: center;
+		order: 2;
+		color: #444444;
+		margin-top: 11px;
+	}
+
+	@media #{$mobile-only} {
 		order: 2;
 		font-family: "Lato", sans-serif;
 		font-size: 12px;
@@ -251,28 +213,6 @@
 		&--item {
 			width: 77px;
 			margin: 0 auto;
-		}
-	}
-
-	.example__result-number {
-		font-family: "Oswald", sans-serif;
-		font-size: 24px;
-		font-weight: 400;
-		line-height: 24px;
-		text-transform: uppercase;
-		text-align: center;
-		color: rgb(0 0 0 / 1);
-		margin: 0;
-
-		&--total {
-			font-family: "Oswald", sans-serif;
-			font-size: 14px;
-			font-weight: 400;
-			line-height: 20px;
-			text-transform: uppercase;
-			text-align: center;
-			color: rgb(0 0 0 / 1);
-			order: 2;
 		}
 	}
 }
