add styles for catalog list

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,10 +1,24 @@
 .catalog__title {
 	font-family: "Oswald", sans-serif;
-	font-size: 36px;
 	font-weight: 400;
-	line-height: 36px;
 	color: rgb(0 0 0 / 1);
-	text-align: center;
+	text-align: left;
+	font-size: 60px;
+	line-height: 60px;
+
+	@media #{$mobile-only} {
+		padding-block: 27px 41px;
+		font-size: 36px;
+		line-height: 36px;
+	}
+
+	@media #{$tablet-only} {
+		padding-block: 39px 82px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 20px 84px;
+	}
 }
 
 .catalog__card-list {
@@ -12,27 +26,26 @@
 	display: grid;
 	padding: 0;
 	grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
-	gap: clamp(60px, calc(30px + 100vw / 25.6), 80px);
+	gap: clamp(35px, calc(25px + 100vw / 25.6), 80px);
+	margin: 0;
+
+	@media #{$mobile-only} {
+		border-bottom: 1px solid #ebebeb;
+	}
+
+	@media #{$tablet-only} {
+		margin: 0 30px;
+	}
+
+	@media #{$desktop-only} {
+		width: 1220px;
+		margin: 0 auto;
+	}
 }
 
-.catalog__card-show-more-label {
-	font-family: "Oswald", sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 20px;
-	text-align: center;
-	color: rgb(17 17 17);
-	text-transform: uppercase;
-}
-
-.catalog__card-show-more-description {
-	text-align: center;
-}
-
-.catalog__card-show-more-button {
-	background-color: rgb(242 242 242);
-	color: var(--main-color);
-	padding: 10px 88px;
-	text-transform: uppercase;
-	text-decoration: none;
+.catalog__card-item {
+	@media #{$mobile-only} {
+		padding-top: 19px;
+		border-top: 1px solid #ebebeb;
+	}
 }
