--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,3 +36,4 @@
 @import "./blocks/map.scss";
 @import "./blocks/disabled.scss";
 @import "./blocks/heading";
+@import "./blocks/card-show-more.scss";
