--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,4 +1,5 @@
-<header class="main-header page__centerer">
+<header class="main-header ">
+	<div class="main-header__wrapper page__centerer">
 	<a class="main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
 		<picture>
 			<source media="(min-width: 1280px)" srcset="./img/logo.svg#logo-desktop" width="71" height="59">
@@ -21,4 +22,4 @@
 			{% endfor %}
 		</ul>
 	</nav>
-</header>
+	</div></header>
