--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,52 +1,146 @@
 .product-card__wrapper {
 	display: grid;
-	grid-template-columns: 140px 140px;
+
+	@media #{$mobile-only} {
+		grid-template-columns: 50% 50%;
+		margin: 0 30px;
+	}
+
+	@media #{$tablet-only} {
+		text-align: center;
+		background-color: #f2f2f2;
+		padding: 0 36px 39px 36px;
+	}
+
+	@media #{$desktop-only} {
+		text-align: center;
+		background-color: #f2f2f2;
+		padding: 0 38px 40px 38px;
+	}
 }
 
 .product-card__link {
 	text-decoration: none;
-	grid-column-start: 2;
-	grid-column-end: 3;
+
+	@media #{$mobile-only} {
+		grid-column-start: 2;
+		grid-column-end: 3;
+	}
+
+	@media #{$not-mobile} {
+		order: 2;
+	}
 }
 
 .product-card__link-img {
 	text-decoration: none;
-	grid-row-start: 1;
-	grid-row-end: 3;
+
+	@media #{$mobile-only} {
+		grid-row: 1/3;
+	}
+
+	@media #{$not-mobile} {
+		order: 1;
+	}
 }
 
 .product-card__label {
 	font-family: "Oswald", sans-serif;
-	font-size: 16px;
 	font-weight: 400;
-	line-height: 20px;
-	text-align: left;
+
 	text-transform: uppercase;
 	color: rgb(34 34 34);
+
+	@media #{$mobile-only} {
+		font-size: 16px;
+		line-height: 20px;
+		max-width: 76px;
+		margin: 0;
+		margin-bottom: 18px;
+		text-align: left;
+	}
+
+	@media #{$tablet-only} {
+		font-size: 20px;
+		line-height: 24px;
+		max-width: 150px;
+		margin: 0 auto;
+		text-align: center;
+		padding-block: 34px 21px;
+	}
+
+	@media #{$desktop-only} {
+		font-size: 20px;
+		line-height: 21px;
+		max-width: 145px;
+		margin: 0 auto;
+		text-align: center;
+		padding-block: 46px 21px;
+	}
 }
 
 .product-card__description {
 	display: grid;
-	grid-template-columns: 70px 70px;
-	row-gap: 6px;
 	font-family: "Lato", sans-serif;
-	font-size: 16px;
 	font-weight: 400;
-	line-height: 20px;
-	text-align: center;
+	color: #444444;
+
+	@media #{$mobile-only} {
+		grid-template-columns: 60px 70px;
+		row-gap: 2px;
+	}
+
+	@media #{$not-mobile} {
+		order: 3;
+		grid-template-columns: 50% 50%;
+	}
 }
 
 .product-card__description-item {
 	margin: 0;
 	padding: 0;
+	text-align: left;
+
+	@media #{$not-mobile} {
+		border-bottom: 1px solid #cdcdcd;
+		padding-block: 9px;
+		font-size: 16px;
+		line-height: 18px;
+		color: #444444;
+	}
 }
 
 .product-card__description-value {
 	margin: 0;
 	padding: 0;
+	text-align: right;
+
+	@media #{$not-mobile} {
+		border-bottom: 1px solid #cdcdcd;
+		padding-block: 9px;
+		font-size: 16px;
+		line-height: 18px;
+		color: #444444;
+	}
 }
 
 .product-card__button {
-	padding: 10px 109px;
-	margin: 0;
+	@media #{$mobile-only} {
+		padding: 10px 109px;
+		margin: 0;
+		margin-top: 22px;
+		grid-column: 1/3;
+	}
+
+	@media #{$tablet-only} {
+		order: 4;
+		padding: 10px 93px;
+		margin-top: 33px;
+	}
+
+	@media #{$desktop-only} {
+		order: 4;
+		padding: 10px 53px;
+		margin-top: 43px;
+	}
 }
