add styles for additional catalog

--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -1,6 +1,68 @@
 .promotion {
 	color: rgb(255 255 255);
-	background: var(--accent-color) var(--bg-image) no-repeat center / contain;
+	background: linear-gradient(
+		rgb(104 183 56 / 0.85),
+		rgb(104 183 56 / 0.85)
+	),
+		var(--bg-image) no-repeat center / cover;
 
 	@include bg-image("bag-background");
+
+	@media #{$mobile-only} {
+		height: 290px;
+		padding: 186px 55px 43px;
+		box-sizing: border-box;
+		margin-bottom: 35px;
+	}
+
+	@media #{$tablet-only} {
+		height: 200px;
+		padding: 71px 124px 70px 422px;
+		box-sizing: border-box;
+		margin-bottom: 76px;
+	}
+
+	@media #{$desktop-only} {
+		height: 290px;
+		padding: 185px 43px 40px 43px;
+		box-sizing: border-box;
+	}
+}
+
+
+.promotion__description {
+	font-family: "Lato", sans-serif;
+	font-weight: 400;
+	text-align: center;
+	margin: 0;
+	position: relative;
+	font-size: 16px;
+	line-height: 20px;
+
+	&::before {
+		content: "";
+		position: absolute;
+		display: block;
+		width: 80px;
+		height: 80px;
+		top: -130px;
+		left: 40px;
+		background-image: url("../../icons/stack.svg#gift");
+	}
+
+	@media #{$tablet-only} {
+		text-align: left;
+
+		&::before {
+			top: -10px;
+			left: -320px;
+		}
+	}
+
+	@media #{$desktop-only} {
+		&::before {
+			top: -120px;
+			left: 55px;
+		}
+	}
 }
