--- a/source/sass/blocks/additional-catalog.scss
+++ b/source/sass/blocks/additional-catalog.scss
@@ -3,6 +3,7 @@
 		display: grid;
 		grid-template-columns: 3fr 1fr;
 		column-gap: 80px;
+		margin-bottom: 86px;
 	}
 }
 
@@ -10,18 +11,38 @@
 	display: grid;
 	list-style-type: none;
 	padding: 0;
-	gap: 32px;
+	border-bottom: 1px solid #cdcdcd;
+	margin: 0;
 
-	@media #{$not-mobile} {
-		gap: 54px;
+	@media #{$mobile-only} {
+		gap: 19px;
+		padding-bottom: 19px;
+		margin-bottom: 35px;
+	}
+
+	@media #{$tablet-only} {
+		gap: 28px;
+		margin-bottom: 70px;
+		padding-bottom: 28px;
 	}
 }
 
 .additional-catalog__label {
 	font-family: "Oswald", sans-serif;
-	font-size: 24px;
 	font-weight: 400;
-	line-height: 24px;
 	color: rgb(0 0 0);
-	text-align: center;
+	text-align: left;
+	font-size: 36px;
+	line-height: 36px;
+
+	@media #{$mobile-only} {
+		font-size: 24px;
+		line-height: 24px;
+		margin-block: 25px 36px;
+	}
+
+	@media #{$tablet-only} {
+		margin-block: 68px 80px;
+		padding-left: 36px;
+	}
 }
