--- a/source/sass/blocks/additional-pruduct-card.scss
+++ b/source/sass/blocks/additional-pruduct-card.scss
@@ -1,25 +1,81 @@
 .additional-product-card__label {
 	font-family: "Oswald", sans-serif;
-	font-size: 16px;
 	font-weight: 400;
-	line-height: 16px;
 	text-align: left;
 	text-transform: uppercase;
 	color: #222222;
+	margin: 0;
+	font-size: 20px;
+	line-height: 20px;
+
+	@media #{$mobile-only} {
+		padding-block: 13px;
+		font-size: 16px;
+		line-height: 16px;
+	}
+
+	@media #{$tablet-only} {
+		padding-block: 26px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 25px;
+	}
 }
+
 
 .additional-product-card__discription {
 	display: flex;
 	justify-content: space-between;
+
+	@media #{$mobile-only} {
+		padding-bottom: 15px;
+	}
+
+	@media #{$tablet-only} {
+		justify-content: end;
+		gap: 50px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 28px 25px;
+	}
 }
 
 .additional-product-card__button {
+	@media #{$tablet-only} {
+		grid-column: 1/3;
+	}
+
+	@media #{$desktop-only} {
+		height: 40px;
+		box-sizing: border-box;
+	}
+
 	padding: 10px 109px;
 }
 
 .additional-product-card {
+	display: grid;
+	border-top: 1px solid #cdcdcd;
+
 	@media #{$desktop-only} {
-		display: flex;
-		justify-content: space-between;
+		grid-template-columns: 1fr 1fr 1fr;
+		align-items: center;
+		gap: 40px;
 	}
+
+	@media #{$tablet-only} {
+		grid-template-columns: 1fr 1fr;
+		align-items: center;
+		padding-inline: 37px;
+	}
+}
+
+.additional-product-card__quantity {
+	margin: 0;
+}
+
+.additional-product-card__price {
+	margin: 0;
 }
