--- a/source/sass/blocks/cooperation.scss
+++ b/source/sass/blocks/cooperation.scss
@@ -6,6 +6,12 @@
 			position: relative;
 		}
 	}
+
+	@media #{$not-desktop} {
+		&--background {
+			background-color: #f2f2f2;
+		}
+	}
 }
 
 .cooperation__title {
