--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -8,7 +8,6 @@
 
 	&::after {
 		content: "";
-		position: absolute;
 		display: block;
 		width: 27px;
 		height: 34px;
@@ -18,6 +17,7 @@
 	}
 
 	@media #{$mobile-only} {
+		display: contents;
 		font-size: 16px;
 		line-height: 19px;
 		text-align: right;
@@ -28,6 +28,7 @@
 
 		&::after {
 			left: 120px;
+			position: absolute;
 		}
 	}
 }
@@ -36,5 +37,10 @@
 	@media #{$not-mobile} {
 		justify-content: end;
 		padding-right: 55px;
+	}
+
+	@media #{$mobile-only} {
+		display: flex;
+		justify-content: space-between;
 	}
 }
