--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -1,3 +1,9 @@
+.page-form {
+	@media #{$tablet-only} {
+		margin-inline: 40px 37px;
+	}
+}
+
 .page-form__field-wrapper {
 	@media #{$desktop-only} {
 		display: grid;
@@ -9,8 +15,58 @@
 	}
 }
 
-.page-form {
+.page-form__button-wrapper {
+	display: flex;
+
+	@media #{$mobile-only} {
+		flex-direction: column;
+	}
+
 	@media #{$tablet-only} {
-		margin-inline: 40px 37px;
+		gap: 64px;
+	}
+
+	@media #{$desktop-only} {
+		gap: 84px;
+		margin-left: 81px;
+		margin-bottom: 82px;
+	}
+}
+
+.page-form__button {
+	box-sizing: border-box;
+	font-family: "Oswald", sans-serif;
+	text-align: center;
+	margin: 0;
+	font-weight: 400;
+
+	@media #{$mobile-only} {
+		padding: 10px 44px;
+		min-width: 280px;
+		width: auto;
+		height: 40px;
+	}
+
+	@media #{$tablet-only} {
+		width: 282px;
+		height: 52px;
+		font-size: 20px;
+		font-weight: 400;
+	}
+
+	@media #{$desktop-only} {
+		width: 568px;
+		height: 52px;
+		font-size: 20px;
+	}
+}
+
+.page-form__text {
+	text-align: center;
+
+	@media #{$mobile-only} {
+		padding-top: 21px;
+		padding-bottom: 32px;
+		margin-block: 0;
 	}
 }
